    anymore as we don't diverge that much nowadays.
  * Temporarily remove OSP support, Asterisk needs a new version (3.5) that
    isn't yet in Debian.
  * Add sox to Recommends, used by res_monitor.
  * Remove ekiga, ohphone, twinkle, kphone from Suggests.
  * Cleanup the documentation provided in the asterisk-doc package.
    (Closes: #499215)

 -- Faidon Liambotis <paravoid@debian.org>  Sun, 25 Oct 2009 23:51:34 +0200

asterisk (1:1.6.2.0~dfsg~rc1-1) unstable; urgency=low

  [ Faidon Liambotis ]
  * New upstream release.
    - Fixes CVE-2009-2726 aka AST-2009-005 (Closes: #541441).
    - Ship CC BY-SA 3.0 licensed music-on-hold sounds, replacing the old
      non-free FreePlay Music that were never distributed by Debian.
    - Removed patches/makefile_appdocs_dtd (merged upstream) and
      patches/disable_moh (obsoleted, see above).
  * Fix FTBFS on armel. (Closes: #532971)
  * Bump Standards-Version to 3.8.3, no changes needed.
  * Provides: asterisk-1.6.2, instead of 1.6.1; there are no ABI gurantees
    between 1.6.x releases.
  * Remove references of Section: comm in individual binary packages as it is
    inherited from the source package.

  [ Tzafrir Cohen ]
  * Patch hardware_dtmf_mute_fix removed: Applied upstream.
  * No need for a separate app_directory_odbc (will use app_voicemail_odbc).
  * Fix name of voicemail 'openssl' dep. (Thomas Renard) (Closes: #539150)
  * Patch AST-2009-006: breaks IAX2 compatibility, note it in NEWS.Debian.
    (Closes: #539473)

 -- Faidon Liambotis <paravoid@debian.org>  Sun, 13 Sep 2009 02:22:17 +0300

asterisk (1:1.6.2.0~dfsg~beta3-1) unstable; urgency=low

  [ Faidon Liambotis ]
  * New upstream release.
    - Drop patches astvarrundir, pubkey_jnctn; merged upstream (finally!).
    - Adapt patch safe_asterisk-nobg.
  * Switch to downloads.asterisk.org instead of downloads.digium.com.
  * Add depends on libxml2-dev for the new XML documentation.
  * Remove Conflicts/Replaces with asterisk-classic, asterisk-bristuff,